clear, footer css

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ images/2/album/20170627134600.jpg
 images/2/album/20170627140038.jpg
 images/2/album/20170627140130.jpg
 images/2/album/20170627140148.jpg
+images/1/album/20170629154913.jpg
+images/3/album/20170629223528.jpg
